--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,217 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Properties of Dot Product - Lab\n", "\n", "## Introduction\n", "\n", "In this lab, you'll be practicing some interesting properties of a dot product-type matrix multiplication. Understanding these properties will become useful as you study machine learning. The lab will require you to calculate results to provide a proof for these properties.\n", "\n", "## Objectives\n", "\n", "In this lab you will: \n", "\n", "- Demonstrate the distributive, commutative, and associative property of dot products \n", "- Use the transpose method to transpose Numpy matrices \n", "- Compute the dot product for matrices and vectors \n", "\n", "\n", "## Instructions\n", "\n", "* For each property, create suitably sized matrices with random data to prove the equations \n", "* Ensure that size/dimension assumptions are met while performing calculations (you'll see errors otherwise)\n", "* Calculate the LHS and RHS for all equations and show if they are equal or not\n", "\n", "## Distributive Property - matrix multiplication IS distributive\n", "\n", "### Prove that $A \\cdot (B+C) = (A \\cdot B + A \\cdot C) $"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Associative Property - matrix multiplication IS associative\n", "### Prove that $A \\cdot (B \\cdot C) = (A \\cdot B) \\cdot C $"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here "]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Commutative Property - matrix multiplication is NOT commutative\n", "### Prove that for matrices, $A \\cdot B \\neq B \\cdot A $"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here "]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Commutative Property -  vector multiplication IS commutative\n", "### Prove that for vectors,  $x^T \\cdot y = y^T \\cdot x$\n", "Note: superscipt<sup>T</sup> denotes the transpose we saw earlier"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here "]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Simplification of the matrix product\n", "### Prove that $ (A \\cdot B)^T = B^T \\cdot A^T $"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["#\u00a0Your code here "]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary \n", "\n", "You've seen enough matrix algebra by now to solve a problem of linear equations as you saw earlier. You'll now see how to do this next. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Properties of Dot Product - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll be practicing some interesting properties of a dot product-type matrix multiplication. Understanding these properties will become useful as you study machine learning. The lab will require you to calculate results to provide a proof for these properties.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "In this lab you will: \n",
+    "\n",
+    "- Demonstrate the distributive, commutative, and associative property of dot products \n",
+    "- Use the transpose method to transpose Numpy matrices \n",
+    "- Compute the dot product for matrices and vectors \n",
+    "\n",
+    "\n",
+    "## Instructions\n",
+    "\n",
+    "* For each property, create suitably sized matrices with random data to prove the equations \n",
+    "* Ensure that size/dimension assumptions are met while performing calculations (you'll see errors otherwise)\n",
+    "* Calculate the LHS and RHS for all equations and show if they are equal or not\n",
+    "\n",
+    "## Distributive Property - matrix multiplication IS distributive\n",
+    "\n",
+    "### Prove that $A \\cdot (B+C) = (A \\cdot B + A \\cdot C) $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "import numpy as np\n",
+    "A = np.array([1,2,3])\n",
+    "B = np.array([4,5,6])\n",
+    "C = np.array([7,8,9])\n",
+    "\n",
+    "A @ (B+C) == (A@B + A@C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associative Property - matrix multiplication IS associative\n",
+    "### Prove that $A \\cdot (B \\cdot C) = (A \\cdot B) \\cdot C $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True],\n",
+       "       [ True,  True]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here \n",
+    "A = np.array([[1,2], [3,4]])\n",
+    "B = np.array([[5,6], [7,8]])\n",
+    "C = np.array([[9,10], [11,12]])\n",
+    "\n",
+    "A @ (B @ C) == (A @ B) @ C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Commutative Property - matrix multiplication is NOT commutative\n",
+    "### Prove that for matrices, $A \\cdot B \\neq B \\cdot A $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False],\n",
+       "       [False, False]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here \n",
+    "A @ B == B @ A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Commutative Property -  vector multiplication IS commutative\n",
+    "### Prove that for vectors,  $x^T \\cdot y = y^T \\cdot x$\n",
+    "Note: superscipt<sup>T</sup> denotes the transpose we saw earlier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here \n",
+    "x = np.array([1,2,3])\n",
+    "y = np.array([4,5,6])\n",
+    "\n",
+    "x.T @ y == y.T @ x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simplification of the matrix product\n",
+    "### Prove that $ (A \\cdot B)^T = B^T \\cdot A^T $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True],\n",
+       "       [ True,  True]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here \n",
+    "(A @ B).T == B.T @ A.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary \n",
+    "\n",
+    "You've seen enough matrix algebra by now to solve a problem of linear equations as you saw earlier. You'll now see how to do this next. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
